# native-algorithms

./: .bettercodehub.yml  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/Spectre.libClassifier/: CMakeLists.txt  ConfusionMatrix.cpp  ConfusionMatrix.h  DatasetFactory.cpp  DatasetFactory.h  DatasetFilter.h  DownsampledOpenCVDataset.cpp  DownsampledOpenCVDataset.h  EmptyOpenCvDatasetException.cpp  EmptyOpenCvDatasetException.h  ExcessiveTrainingRateException.cpp  ExcessiveTrainingRateException.h  FileOpenException.cpp  FileOpenException.h  IClassifier.h  InsufficientDataException.cpp  InsufficientDataException.h  NegativeTrainingRateException.cpp  NegativeTrainingRateException.h  NotABinaryLabelException.cpp  NotABinaryLabelException.h  ObservationExtractor.cpp  ObservationExtractor.h  OpenCvDataset.cpp  OpenCvDataset.h  RandomSplitter.cpp  RandomSplitter.h  RaportGenerator.cpp  RaportGenerator.h  Spectre.libClassifier.vcxproj  Spectre.libClassifier.vcxproj.filters  SplittedOpenCvDataset.cpp  SplittedOpevCvDataset.h  Svm.cpp  Svm.h  Types.h  UnsupportedDatasetTypeException.h  UntrainedClassifierException.h
src/Spectre.libClassifier.Tests/: CMakeLists.txt  ConfusionMatrixTest.cpp  DatasetFactoryTest.cpp  DownsampledOpenCVDatasetTest.cpp  ObservationExtractorTest.cpp  OpenCvDatasetTest.cpp  RandomSplitterTest.cpp  Spectre.libClassifier.Tests.vcxproj  Spectre.libClassifier.Tests.vcxproj.filters  SplittedOpenCVDatasetTest.cpp  SvmTest.cpp  test_file.txt
src/Spectre.libException/: ArgumentEqualZeroException.cpp  ArgumentEqualZeroException.h  ArgumentOutOfRangeException.h  CMakeLists.txt  EmptyArgumentException.cpp  EmptyArgumentException.h  EmptyDatasetException.cpp  EmptyDatasetException.h  ExceptionBase.cpp  ExceptionBase.h  InconsistentArgumentSizesException.cpp  InconsistentArgumentSizesException.h  NullPointerException.cpp  NullPointerException.h  OpenFileException.cpp  OpenFileException.h  OutOfRangeException.cpp  OutOfRangeException.h  ReachedUnreachableCodeException.cpp  ReachedUnreachableCodeException.h  Spectre.libException.vcxproj  Spectre.libException.vcxproj.filters  UnexpectedException.cpp  UnexpectedException.h
src/Spectre.libFunctional.Tests/: CMakeLists.txt  FilterTest.cpp  FindTest.cpp  RangeTest.cpp  Spectre.libFunctional.Tests.vcxproj  Spectre.libFunctional.Tests.vcxproj.filters  TransformTest.cpp
src/Spectre.libGaClassifier/: AllLabelTypesIncludedCondition.cpp  AllLabelTypesIncludedCondition.h  CMakeLists.txt  ClassifierFactory.cpp  ClassifierFactory.h  ClassifierFitnessFunction.cpp  ClassifierFitnessFunction.h  GaClassifier.cpp  GaClassifier.h  GaFitnessClassifier.cpp  GaFitnessFunction.cpp  GaFitnessFunction.h  GeneticAlgorithm.cpp  GeneticTrainingSetSelectionScenario.cpp  GeneticTrainingSetSelectionScenario.h  InconsistentMinimalAndMaximalFillupException.cpp  InconsistentMinimalAndMaximalFillupException.h  IndividualFeasibilityConditionsFactory.cpp  IndividualFeasibilityConditionsFactory.h  Spectre.libGaClassifier.vcxproj  Spectre.libGaClassifier.vcxproj.filters
src/Spectre.libGaClassifier.Tests/: AllLabelTypesIncludedConditionTest.cpp  CMakeLists.txt  ClassifierFactoryTest.cpp  ClassifierFitnessFunctionTest.cpp  GaClassifierTest.cpp  GaFitnessFunctionTest.cpp  GeneticTrainingSetSelectionScenarioTest.cpp  IndividualFeasibilityConditionsFactoryTest.cpp  Spectre.libGaClassifier.Tests.vcxproj  Spectre.libGaClassifier.Tests.vcxproj.filters  packages.config  test_scenario_file.txt
src/Spectre.libGaussianMixtureModelling/: CMakeLists.txt  ClearPeakFinder.cpp  ClearPeakFinder.h  DataTypes.h  DynamicProgrammingInitialization.h  DynamicProgrammingInitializationPar.h  EmergencyCorrection.h  ExpectationMaximization.h  ExpectationMaximizationPar.h  ExpectationRunnerOpt.h  ExpectationRunnerRef.h  GaussianDistribution.h  GaussianMixtureModel.h  GmmOptions.h  LogLikelihoodCalculator.h  Matrix.h  MaximizationRunnerOpt.h  MaximizationRunnerRef.h  ModelUtils.h  ModelWithGaussianMixture.h  Profiler.h  RandomInitializationRef.h  SegmentDecomposer.h  SegmentExtractor.h  SignalDecomposer.h  Spectre.libGaussianMixtureModelling.vcxproj  Spectre.libGaussianMixtureModelling.vcxproj.filters  SplitterSegmentDecomposer.h  SplitterSegmentExtractor.cpp  SplitterSegmentExtractor.h  SplitterSegmentExtractorPar.cpp  SplitterSegmentExtractorPar.h
src/Spectre.libGaussianMixtureModelling.Tests/: CMakeLists.txt  ClearPeakFinderTest.cpp  DynamicProgramminInitializationTest.cpp  EmergencyCorrectionTest.cpp  ExpectationMaximizationTest.cpp  GaussianDistributionTest.cpp  GaussianMixtureModelTest.cpp  ModelUtilsTest.cpp  ModelWithGaussianMixtureTest.cpp  SegmentExtractorTest.cpp  SignalDecomposerTest.cpp  Spectre.libGaussianMixtureModelling.Tests.vcxproj  Spectre.libGaussianMixtureModelling.Tests.vcxproj.filters  SplitterSegmentExtractorTest.cpp  gmm_resampled_mean.txt  gmm_resampled_mz.txt
src/Spectre.libGenetic/: AllLabelTypesIncludedCondition.cpp  AllLabelTypesIncludedCondition.h  BaseIndividualFeasibilityCondition.cpp  CMakeLists.txt  (+58 more)
src/Spectre.libGenetic.Tests/: AllLabelTypesIncludedConditionTest.cpp  BaseIndividualFeasibilityConditionTest.cpp  CMakeLists.txt  CrossoverOperatorTest.cpp  GenerationFactoryTest.cpp  GenerationTest.cpp  GeneticAlgorithmTest.cpp  IndividualTest.cpp  IndividualsBuilderStrategyTest.cpp  LengthConditionTest.cpp  MaximalFillupConditionTest.cpp  MaximalPercentageFillupConditionTest.cpp  MinimalFillupConditionTest.cpp  MinimalLengthConditionTest.cpp  MinimalPercentageFillupConditionTest.cpp  MinimalTrueValueNumberConditionTest.cpp  MockBaseIndividualFeasibilityCondition.h  MockCrossoverOperator.h  MockFitnessFunction.h  MockIndividualsBuilderStrategy.h  MockMutationOperator.h  MockOffspringGenerator.h  MockParentSelectionStrategy.h  MockPreservationStrategy.h  MockScorer.h  MockStopCondition.h  MutationOperatorTest.cpp  OffspringGeneratorTest.cpp  ParentSelectionStrategyTest.cpp  PreservationStrategyTest.cpp  ScorerTest.cpp  Spectre.libGenetic.Tests.vcxproj  Spectre.libGenetic.Tests.vcxproj.filters  StopConditionTest.cpp
(+230 files in other folders)
