add_library(Spectre.libClassifier STATIC
        ConfusionMatrix.cpp
        ConfusionMatrix.h
        DatasetFactory.cpp
        DatasetFactory.h
        DatasetFilter.h
        DownsampledOpenCVDataset.cpp
        DownsampledOpenCVDataset.h
        EmptyOpenCvDatasetException.cpp
        EmptyOpenCvDatasetException.h
        ExcessiveTrainingRateException.cpp
        ExcessiveTrainingRateException.h
        FileOpenException.cpp
        FileOpenException.h
        IClassifier.h
        InsufficientDataException.cpp
        InsufficientDataException.h
        NegativeTrainingRateException.cpp
        NegativeTrainingRateException.h
        NotABinaryLabelException.cpp
        NotABinaryLabelException.h
        ObservationExtractor.cpp
        ObservationExtractor.h
        OpenCvDataset.cpp
        OpenCvDataset.h
        RandomSplitter.cpp
        RandomSplitter.h
        SplittedOpenCvDataset.cpp
        SplittedOpevCvDataset.h
        Svm.cpp
        Types.h
        UnsupportedDatasetTypeException.h
        UntrainedClassifierException.h
        )
