add_library(Spectre.libException STATIC
        ArgumentOutOfRangeException.h
        EmptyArgumentException.cpp
        EmptyArgumentException.h
        EmptyDatasetException.cpp
        EmptyDatasetException.h
        ExceptionBase.cpp
        ExceptionBase.h
        InconsistentArgumentSizesException.cpp
        InconsistentArgumentSizesException.h
        NullPointerException.cpp
        NullPointerException.h
        OutOfRangeException.cpp
        OutOfRangeException.h
        ReachedUnreachableCodeException.cpp
        ReachedUnreachableCodeException.h
        )
