add_library(Spectre.libGaClassifier STATIC
        AllLabelTypesIncludedCondition.cpp
        AllLabelTypesIncludedCondition.h
        ClassifierFitnessFunction.cpp
        ClassifierFitnessFunction.h
        GaClassifier.cpp
        GaClassifier.h
        IndividualFeasibilityConditionsFactory.cpp
        IndividualFeasibilityConditionsFactory.h
        )
