add_library(Spectre.libGaussianMixtureModelling STATIC
        ClearPeakFinder.cpp
        ClearPeakFinder.h
        DataTypes.h
        DynamicProgrammingInitialization.h
	DynamicProgrammingInitializationPar.h
        ExpectationMaximization.h
        ExpectationRunnerOpt.h
        ExpectationRunnerRef.h
	EmergencyCorrection.h
        GaussianDistribution.h
        GaussianMixtureModel.h
        GmmOptions.h
        LogLikelihoodCalculator.h
        Matrix.h
        MaximizationRunnerOpt.h
        MaximizationRunnerRef.h
        RandomInitializationRef.h
        SignalDecomposer.h
        SplitterSegmentDecomposer.h
        SplitterSegmentExtractor.cpp
        SplitterSegmentExtractor.h
	SplitterSegmentExtractorPar.h
	SplitterSegmentExtractorPar.cpp
        )
