add_library(Spectre.libGenetic STATIC
        BaseIndividualFeasibilityCondition.cpp
        BaseIndividualFeasibilityCondition.h
        CrossoverOperator.cpp
        CrossoverOperator.h
        DataTypes.h
        ExcessivePreservationRateException.cpp
        ExcessivePreservationRateException.h
        FitnessFunction.h
        Generation.cpp
        Generation.h
        GenerationFactory.cpp
        GenerationFactory.h
        GeneticAlgorithm.cpp
        GeneticAlgorithm.h
        GeneticAlgorithmFactory.cpp
        GeneticAlgorithmFactory.h
        InconsistentChromosomeLengthException.cpp
        InconsistentChromosomeLengthException.h
        InconsistentGenerationAndScoresLengthException.cpp
        InconsistentGenerationAndScoresLengthException.h
        InconsistentMinimalAndMaximalFillupException.cpp
        InconsistentMinimalAndMaximalFillupException.h
        Individual.cpp
        Individual.h
        IndividualsBuilderStrategy.cpp
        IndividualsBuilderStrategy.h
        LengthCondition.cpp
        LengthCondition.h
        MaximalFillupCondition.cpp
        MaximalFillupCondition.h
        MaximalPercentageFillupCondition.cpp
        MaximalPercentageFillupCondition.h
        MinimalFillupCondition.cpp
        MinimalFillupCondition.h
        MinimalPercentageFillupCondition.cpp
        MinimalPercentageFillupCondition.h
        MutationOperator.cpp
        MutationOperator.h
        NegativePreservationRateException.cpp
        NegativePreservationRateException.h
        OffspringGenerator.cpp
        OffspringGenerator.h
        ParentSelectionStrategy.cpp
        ParentSelectionStrategy.h
        PreservationStrategy.cpp
        PreservationStrategy.h
        Scorer.cpp
        Scorer.h
        Sorting.h
        StopCondition.cpp
        StopCondition.h
        )
