add_library(Spectre.libStatistics STATIC
        CohenEffectSize.cpp
        CohenEffectSize.h
        DifferentiatingFeaturesEstimator.cpp
        DifferentiatingFeaturesEstimator.h
        InconsistentNumberOfFeaturesException.cpp
        InconsistentNumberOfFeaturesException.h
        Math.h
        StatisticalIndex.cpp
        StatisticalIndex.h
        Statistics.h
        Types.h
        ValuesHomogeneityEstimator.h
        )
