add_library(Spectre.libWavelet STATIC
        AlgorithmConstants.h
        Convolution.cpp
        Convolution.h
        DataTypes.h
        DaubechiesFiltersDenoiser.cpp
        DaubechiesFiltersDenoiser.h
        MedianAbsoluteDeviationNoiseEstimator.cpp
        MedianAbsoluteDeviationNoiseEstimator.h
        PrecomputedDaubechiesCoefficients.h
        SoftThresholder.cpp
        SoftThresholder.h
        WaveletCoefficients.h
        WaveletDecomposerRef.cpp
        WaveletDecomposerRef.h
        WaveletReconstructorRef.cpp
        WaveletReconstructorRef.h
        WaveletUtils.h
        )
